force-app/main/default/objects/Opportunity/fields/Docs_Requested__c.field-meta.xml
<CustomField>
    <fullName>Docs_Requested__c</fullName>
    <description>Date Initial Borrower Docs Were Requested</description>
    <inlineHelpText>Date Initial Borrower Docs Were Requested</inlineHelpText>
    <label>Docs Requested</label>
    <type>Date</type>
</CustomField>