force-app/main/default/objects/Opportunity/fields/Down_Payment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_Percent__c</fullName>
    <label>Down Payment Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>