force-app/main/default/objects/Opportunity/fields/DTI__c.field-meta.xml
<CustomField>
    <fullName>DTI__c</fullName>
    <label>Bottom DTI</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>