force-app/main/default/objects/Opportunity/fields/DTI_Top__c.field-meta.xml
<CustomField>
    <fullName>DTI_Top__c</fullName>
    <label>Top DTI</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>