force-app/main/default/objects/Opportunity/fields/Due_In_Months__c.field-meta.xml
<CustomField>
    <fullName>Due_In_Months__c</fullName>
    <label>Due In Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>