force-app/main/default/objects/Opportunity/fields/Dummy_Update__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Update__c</fullName>
    <description>Field/Value used to trigger a scheduled flow update that triggers record update</description>
    <label>Dummy Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>