force-app/main/default/objects/Opportunity/fields/Duration_App_to_Approved__c.field-meta.xml
<CustomField>
    <fullName>Duration_App_to_Approved__c</fullName>
    <formula>Date_Approved__c -  Date_of_Application__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration - App to Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>