force-app/main/default/objects/Opportunity/fields/Duration_Sub_to_CTC__c.field-meta.xml
<CustomField>
    <fullName>Duration_Sub_to_CTC__c</fullName>
    <formula>Date_CTC__c -  Date_Submitted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration - Sub to CTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>