force-app/main/default/objects/Opportunity/fields/Encompass_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Action_Taken__c</fullName>
    <label>Action Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>