force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Amortization_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Amortization_Term_Months__c</fullName>
    <label>Amortization Term (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>