force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Amortization_Type__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Amortization_Type__c</fullName>
    <label>Amortization Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Rate</fullName>
            </value>
            <value>
                <fullName>GPM - Rate</fullName>
            </value>
            <value>
                <fullName>ARM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>