force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Current_Milestone__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Current_Milestone__c</fullName>
    <label>Current Milestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>