force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Encompass_Loan_Id__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Encompass_Loan_Id__c</fullName>
    <externalId>true</externalId>
    <label>Encompass Loan Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>