force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Estimated_Mortgage_Insurance_Payment__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Estimated_Mortgage_Insurance_Payment__c</fullName>
    <label>Estimated Mortgage Insurance Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>