force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Estimated_Other_Mortgage_Payments_Amount__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Estimated_Other_Mortgage_Payments_Amount__c</fullName>
    <label>Estimated Other Mortgage Payments Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>