force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Estimated_Real_Estate_Taxes_Amount__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Estimated_Real_Estate_Taxes_Amount__c</fullName>
    <label>Estimated Real Estate Taxes Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>