force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Estimated_Supplemental_Hazard_Insurance__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Estimated_Supplemental_Hazard_Insurance__c</fullName>
    <label>Estimated Supplemental Hazard Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>