force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Interest_Rate__c</fullName>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>