force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Lien_Type__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Lien_Type__c</fullName>
    <label>Lien Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Subordinate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>