force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Loan_Id__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Loan_Id__c</fullName>
    <label>Deprecated_Loan Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>