force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Loan_Purpose__c</fullName>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Construction - Perm</fullName>
            </value>
            <value>
                <fullName>No cash-Out Refi</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Cash-Out Refi</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>