force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Lot_Original_Cost__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Lot_Original_Cost__c</fullName>
    <label>Lot Original Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>