force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Mortgage_Type__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Mortgage_Type__c</fullName>
    <label>Mortgage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>FHA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>USDA-RHS</fullName>
            </value>
            <value>
                <fullName>HELOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>