force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Other_Mortgage_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Other_Mortgage_Type_Description__c</fullName>
    <label>Other Mortgage Type Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>