force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Property_Street__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Property_Street__c</fullName>
    <label>Property Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>