force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Property_ZIP__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Property_ZIP__c</fullName>
    <label>Property ZIP</label>
    <length>24</length>
    <type>Text</type>
</CustomField>