force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Purchase_Price_Amount__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Purchase_Price_Amount__c</fullName>
    <label>Purchase Price Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>