force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Refinance_Purpose__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Refinance_Purpose__c</fullName>
    <label>Refinance Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash-Out Debt Consolidation</fullName>
            </value>
            <value>
                <fullName>Cash-Out Home Improvement</fullName>
            </value>
            <value>
                <fullName>Cash-Out Limited</fullName>
            </value>
            <value>
                <fullName>Cash-Out Other</fullName>
            </value>
            <value>
                <fullName>Cash-Out with Original Lender</fullName>
            </value>
            <value>
                <fullName>No Cash-Out Other</fullName>
            </value>
            <value>
                <fullName>No Cash-Out FHA Streamlined</fullName>
            </value>
            <value>
                <fullName>No Cash-Out Freddie Owned</fullName>
            </value>
            <value>
                <fullName>No Cash-Out Streamlined</fullName>
            </value>
            <value>
                <fullName>Np Cash-Out With Original Lender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>