force-app/main/default/objects/Opportunity/fields/encompass_By_EM__Units_Financed__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Units_Financed__c</fullName>
    <label>Units Financed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>