force-app/main/default/objects/Opportunity/fields/Encompass_Credit_Report_Fee__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Credit_Report_Fee__c</fullName>
    <label>Credit Report Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>