force-app/main/default/objects/Opportunity/fields/Encompass_Fee_ID_1__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Fee_ID_1__c</fullName>
    <label>Encompass Fee ID 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>