force-app/main/default/objects/Opportunity/fields/Encompass_Folder__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Folder__c</fullName>
    <label>Encompass Folder</label>
    <length>50</length>
    <type>Text</type>
</CustomField>