force-app/main/default/objects/Opportunity/fields/Encompass_Next_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Next_Deadline__c</fullName>
    <description>Next deadline field for Encompas batch job</description>
    <label>Encompass Next Deadline</label>
    <type>Date</type>
</CustomField>