force-app/main/default/objects/Opportunity/fields/Encompass_Rec_Trfr_Tax_Stamps__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Rec_Trfr_Tax_Stamps__c</fullName>
    <description>Sum of recording, transfer tax, and stamps in Encompass</description>
    <label>Encompass Rec/Trfr Tax/Stamps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>