force-app/main/default/objects/Opportunity/fields/Encompass_Total_Base_Income__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Total_Base_Income__c</fullName>
    <label>Encompass Total Base Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>