force-app/main/default/objects/Opportunity/fields/Encompass_Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Total_Fees__c</fullName>
    <description>Total Fees from the CX.CRMTOTALFEES field in Encompass</description>
    <label>Total Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>