force-app/main/default/objects/Opportunity/fields/Encompass_Total_Other_Income__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Total_Other_Income__c</fullName>
    <description>Total other income figure from Encompass which includes OT, Bonus, Commission</description>
    <label>Encompass Total Other Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>