force-app/main/default/objects/Opportunity/fields/Encompass_Total_Trfr_Tax_Stamps__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Total_Trfr_Tax_Stamps__c</fullName>
    <label>Trfr Tax &amp; Stamps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>