force-app/main/default/objects/Opportunity/fields/Encompass_VOE_Fee__c.field-meta.xml
<CustomField>
    <fullName>Encompass_VOE_Fee__c</fullName>
    <label>Encompass VOE Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>