force-app/main/default/objects/Opportunity/fields/EPO_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>EPO_Expiration_Date__c</fullName>
    <formula>Closed_Date__c +  EPO_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPO Expiration Date</label>
    <type>Date</type>
</CustomField>