force-app/main/default/objects/Opportunity/fields/EPO_Formula__c.field-meta.xml
<CustomField>
    <fullName>EPO_Formula__c</fullName>
    <formula>IF( OR(CONTAINS (TEXT(Loan_Program__c) , &apos;FHA&apos;) , CONTAINS(TEXT(Loan_Program__c), &apos;VA&apos;) ) , 211,  


CASE ( Lender__c, 
&apos;Franklin American&apos;,  121,
&apos;Franklin&apos;,  121, 
&apos;FAMC&apos;, 121,
&apos;Citizens&apos;,  121, 
&apos;HomePoint&apos;, 151,
&apos;The Loan Store&apos;, 151,
&apos;LDW&apos;, 121,
181)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPO Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>