force-app/main/default/objects/Opportunity/fields/Escrow_Company__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Company__c</fullName>
    <label>Escrow Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>