force-app/main/default/objects/Opportunity/fields/Escrow_Contact__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escrow Officer</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Company</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Type</field>
            <operation>equals</operation>
            <value>Escrow Company</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loans (Escrow Officer)</relationshipLabel>
    <relationshipName>Escrow_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>