force-app/main/default/objects/Opportunity/fields/Escrow_Fees__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Fees__c</fullName>
    <description>Escrow Fees summarized in Section 1100 per Encmopass field ID CX.CRM.ESCROWFEES</description>
    <label>Escrow Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>