force-app/main/default/objects/Opportunity/fields/Escrow_Officer__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Officer__c</fullName>
    <label>Escrow Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>