force-app/main/default/objects/Opportunity/fields/Escrow_Officer_Cell__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Officer_Cell__c</fullName>
    <label>Escrow Officer Cell</label>
    <type>Phone</type>
</CustomField>