force-app/main/default/objects/Opportunity/fields/Escrow_Officer_Email__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Officer_Email__c</fullName>
    <label>Escrow Officer Email</label>
    <type>Email</type>
</CustomField>