force-app/main/default/objects/Opportunity/fields/Escrows__c.field-meta.xml
<CustomField>
    <fullName>Escrows__c</fullName>
    <label>Escrows</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None Waived</fullName>
            </value>
            <value>
                <fullName>None Waived - Same Servicer</fullName>
            </value>
            <value>
                <fullName>All Waived</fullName>
            </value>
            <value>
                <fullName>See Mortgage Statement</fullName>
            </value>
            <value>
                <fullName>Insurance Only</fullName>
            </value>
            <value>
                <fullName>Taxes Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>