force-app/main/default/objects/Opportunity/fields/Escrows_Collected__c.field-meta.xml
<CustomField>
    <fullName>Escrows_Collected__c</fullName>
    <inlineHelpText>Section 1000 in Fee Itemization</inlineHelpText>
    <label>Escrows Collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>