force-app/main/default/objects/Opportunity/fields/Escrows_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Escrows_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escrows Indicator</label>
    <type>Checkbox</type>
</CustomField>