force-app/main/default/objects/Opportunity/fields/Escrows_Waived__c.field-meta.xml
<CustomField>
    <fullName>Escrows_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the field synced to Point.  Values are true/false.  Use the Escrows_Waived_Formula__c field for user-friendly values.</description>
    <label>Escrows Waived Checkbox</label>
    <type>Checkbox</type>
</CustomField>