force-app/main/default/objects/Opportunity/fields/Escrows_Waived_Formula__c.field-meta.xml
<CustomField>
    <fullName>Escrows_Waived_Formula__c</fullName>
    <formula>IF(Escrows_Waived__c , &apos;No&apos;, &apos;Yes&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escrows Waived</label>
    <type>Text</type>
</CustomField>