force-app/main/default/objects/Opportunity/fields/Estimated_Cash_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cash_to_Close__c</fullName>
    <inlineHelpText>From the LE and CD, should match the Cash To/From Borrower on Fee Itemization</inlineHelpText>
    <label>Estimated Cash to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>