force-app/main/default/objects/Opportunity/fields/Estimated_Flood_Insurance_Payment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Flood_Insurance_Payment__c</fullName>
    <label>Est Flood Ins Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>