force-app/main/default/objects/Opportunity/fields/Estimated_LTV__c.field-meta.xml
<CustomField>
    <fullName>Estimated_LTV__c</fullName>
    <label>Estimated LTV</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>