force-app/main/default/objects/Opportunity/fields/Evidence_of_Insurance_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Evidence_of_Insurance_Ordered__c</fullName>
    <label>Insurance Ordered</label>
    <type>Date</type>
</CustomField>