force-app/main/default/objects/Opportunity/fields/Evidence_of_Insurance_Received__c.field-meta.xml
<CustomField>
    <fullName>Evidence_of_Insurance_Received__c</fullName>
    <label>Insurance Received</label>
    <type>Date</type>
</CustomField>