force-app/main/default/objects/Opportunity/fields/Evidence_of_Insurance_Required__c.field-meta.xml
<CustomField>
    <fullName>Evidence_of_Insurance_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Insurance Required</label>
    <type>Checkbox</type>
</CustomField>