force-app/main/default/objects/Opportunity/fields/Exp_1Mtg_Present__c.field-meta.xml
<CustomField>
    <fullName>Exp_1Mtg_Present__c</fullName>
    <description>Expense, FIrst Mortgage Present</description>
    <label>First Mortgage Present</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>