force-app/main/default/objects/Opportunity/fields/Exp_1Mtg_Proposed__c.field-meta.xml
<CustomField>
    <fullName>Exp_1Mtg_Proposed__c</fullName>
    <label>First Mortgage Proposed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>