force-app/main/default/objects/Opportunity/fields/Exp_All_Oth_Prop__c.field-meta.xml
<CustomField>
    <fullName>Exp_All_Oth_Prop__c</fullName>
    <label>All Other Properties</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>