force-app/main/default/objects/Opportunity/fields/Exp_All_Other_Payments__c.field-meta.xml
<CustomField>
    <fullName>Exp_All_Other_Payments__c</fullName>
    <label>All Other Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>