force-app/main/default/objects/Opportunity/fields/Exp_HazIns_Present__c.field-meta.xml
<CustomField>
    <fullName>Exp_HazIns_Present__c</fullName>
    <label>Haz Ins Present</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>