force-app/main/default/objects/Opportunity/fields/Exp_MtgIns_Present__c.field-meta.xml
<CustomField>
    <fullName>Exp_MtgIns_Present__c</fullName>
    <description>Expense, Mortgage Insurance, Present</description>
    <label>Mrg Ins Present</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>