force-app/main/default/objects/Opportunity/fields/Exp_OthFin_Present__c.field-meta.xml
<CustomField>
    <fullName>Exp_OthFin_Present__c</fullName>
    <label>Other Fin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>