force-app/main/default/objects/Opportunity/fields/Exp_Primary_Housing_Total_del__c.field-meta.xml
<CustomField>
    <fullName>Exp_Primary_Housing_Total_del__c</fullName>
    <label>Primary House Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>