force-app/main/default/objects/Opportunity/fields/Exp_Rent__c.field-meta.xml
<CustomField>
    <fullName>Exp_Rent__c</fullName>
    <label>Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>