force-app/main/default/objects/Opportunity/fields/Exp_Subject_Prop_Net_Neg__c.field-meta.xml
<CustomField>
    <fullName>Exp_Subject_Prop_Net_Neg__c</fullName>
    <label>Subj Prop Net Neg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>