force-app/main/default/objects/Opportunity/fields/Exp_Taxes_Proposed__c.field-meta.xml
<CustomField>
    <fullName>Exp_Taxes_Proposed__c</fullName>
    <label>Taxes Proposed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>