force-app/main/default/objects/Opportunity/fields/Fee1__c.field-meta.xml
<CustomField>
    <fullName>Fee1__c</fullName>
    <label>Fee1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>