force-app/main/default/objects/Opportunity/fields/Fee1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee1_Amount__c</fullName>
    <label>Fee1 Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>