force-app/main/default/objects/Opportunity/fields/Fee2__c.field-meta.xml
<CustomField>
    <fullName>Fee2__c</fullName>
    <label>Fee2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>