force-app/main/default/objects/Opportunity/fields/Fee2_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee2_Amount__c</fullName>
    <label>Fee2 Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>