force-app/main/default/objects/Opportunity/fields/Fee3__c.field-meta.xml
<CustomField>
    <fullName>Fee3__c</fullName>
    <label>Fee3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>