force-app/main/default/objects/Opportunity/fields/Fee3_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee3_Amount__c</fullName>
    <label>Fee3 Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>